Table account{
  account_id integer [pk]
  name VARCHAR(50)
  last_name VARCHAR(50)
  email VARCHAR(255) [unique, not null]
  password_hash VARCHAR(255) [not null]
  pseudo VARCHAR(30) [unique, not null]
  profile_photo_url VARCHAR(255)
  created_at timestamp [not null]
  updated_at timestamp [not null]
  games_played integer [not null, default: 0]
  games_won integer [not null, default: 0]
  games_lost integer [not null, default: 0]
  personal_best integer [not null, default: 0]
}

Table game{
  game_id integer [pk]
  players_count integer [not null]
  played_at timestamp [not null]
}

Table game_player{
  game_player_id integer [pk]
  game_id integer [not null, ref: > game.game_id]
  account_id integer [not null, ref: > account.account_id]
  score integer [not null]
  placement integer
  
  indexes {
    (game_id, account_id) [unique]
  }
}

Table friendship{
  account_2_id integer [not null, ref: > account.account_id]
  account_1_id integer [not null, ref: > account.account_id]
  indexes {
    (account_1_id, account_2_id) [pk]
  }
}

Table blocking{
  account_blocker_id integer [not null, ref: > account.account_id]
  account_blocked_id integer [not null, ref: > account.account_id]
  indexes {
    (account_blocker_id, account_blocked_id) [pk]
  }
}
